--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@huggingface/inference": "^4.11.1",
     "openai": "^6.2.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
